<resources>
    <string name="app_name">Studia</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="sign_in">"   Sign In   "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="name">"STUDIA"</string>
    <string name="welcome">"Welcome To"</string>
    <string name="signUp">"Don't have an account? Sign up!"</string>
    <string name="email">"  Email"</string>
    <string name="register">"  Register  "</string>
    <string name="password">"  Password"</string>
    <string name="confirm_password">"  Confirm Password"</string>
    <string name="create_account">"  Create Account  "</string>
    <string name="setup">Set Up Info</string>
    <string name="inputFirstName">"  First Name"</string>
    <string name="inputLastName">"  Last Name"</string>
    <string name="inputUsername">"  Username"</string>
    <string name="inputGender">"  Gender (type M, F, or N/A)"</string>
    <string name="inputBirthday">"  Birthday (type as mm/dd/yy or mmddyy)"</string>
    <string name="inputSchool">"  School"</string>
    <string name="finishSetup">"  Finish Setup "</string>
    <string name="testLogout">"  Logout  "</string>
    <string name="groups_tab_header">"GROUPS (...)"</string>
    <string name="loading">"Loading..."</string>
    <string name="pending_dots">"..."</string>
    <string name="toChatroom">" Chatroom "</string>
    <string name="noUsers">" No Users Found! "</string>
    <string name="userList">"USERS"</string>
    <string name="chatRoomDefault">"Username"</string>
    <string name="clearSetup">"Clear Fields"</string>
    <string name="clearChatroomMessages">"CLEAR \nMESSAGES"</string>
    <string name="searchtab">SEARCH</string>
    <string name="groupstab">GROUPS</string>
    <string name="calendarTab">CALENDAR</string>
    <string name="profileTab">PROFILE</string>
    <string name="settingsTab">SETTINGS</string>
    <string name="logoutTab">LOGOUT</string>
    <string name="settings_bio">"  Bio"</string>
    <string name="settings_user_info">"Account Info"</string>
    <string name="settings_update_user_info">" Update Profile Info "</string>
    <string name="group_name_test">"8th Period Tra Mobile and Web App Development"</string>
    <string name="group_member_test">"15"</string>
    <string name="group_subject_test">"Computer Science (Honors) "</string>
    <string name="group_owner_test">"jjlee214"</string>
    <string name="group_teacher_label">"Teacher: "</string>
    <string name="group_teacher_test">"Dr. Stickler"</string>
    <string name="group_period_label">"Period: "</string>
    <string name="group_period_test">"1"</string>
    <string name="group_subject_label">"Subject: "</string>
    <string name="group_owner_label">"Owner: "</string>
    <string name="group_view_invites">"  Invites  "</string>
    <string name="group_view_requests">"  Requests  "</string>
    <string name="pipe">"|"</string>
    <string name="group_create_group">"Create Group"</string>
    <string name="group_noGroups">"You are not in any groups."</string>
    <string name="addSchool_header">"Add A School"</string>
    <string name="addSchool_name">" School Name"</string>
    <string name="addSchool_nameInstructions">"Please write out the full name of the school. For example, type Oakton High School instead of OHS."</string>
    <string name="addSchool_city">" City"</string>
    <string name="addSchool_state">" State"</string>
    <string name="addSchool_button">"Add School"</string>
    <string name="addSchool_goBack">"Go Back"</string>
    <string name="search_headerText">SEARCH</string>
    <string name="searchFilter_buttonText1">"  Search Groups  "</string>
    <string name="searchFilter_buttonText2">"  Join Group  "</string>
    <string name="searchFilter_section1">Search By School &amp; Class</string>
    <string name="group_teacherPeriod">"Teacher: N/A     Period: N/A"</string>
    <string name="searchFilter_section2">Enter Group Code</string>
    <string name="searchList_noGroups">"There are no groups within your search parameters."</string>
    <string name="searchList_goBack">"    Go Back    "</string>
    <string name="messages_header">GROUP CHAT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_all">Delete All</string>

</resources>