<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/darkBackground"
    android:backgroundTint="@color/darkBackground">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/appname_register"
        android:text="@string/name"
        android:textColor="@color/mainTextColor"
        android:fontFamily="@font/nexa_bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="65sp"
        android:textAllCaps="false"
        app:layout_constraintVertical_bias="0.2"
        >
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/mainTextColor"
        android:fontFamily="@font/nexa_light"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/appname_register"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="40sp"
        android:textAllCaps="false"
        app:layout_constraintVertical_bias="0.99"
        >
    </TextView>

    <EditText
        android:id="@+id/emailInput_register"
        android:layout_width="360sp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:padding="8dp"
        android:drawableStart="@drawable/email_icon"
        android:fontFamily="@font/circular_book"
        android:background="@drawable/input"
        android:textColorHint="@color/gray"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.42"/>

    <EditText
        android:id="@+id/passwordInput_register"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:background="@drawable/input"
        android:drawableStart="@drawable/password_icon"
        android:fontFamily="@font/circular_book"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55" />

    <EditText
        android:id="@+id/confirmpasswordInput_register"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        android:textColor="@color/black"
        android:fontFamily="@font/circular_book"
        android:background="@drawable/input"
        android:padding="8dp"
        android:textSize="23sp"
        android:drawableStart="@drawable/password_icon"
        android:textColorHint="@color/gray"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.68"

        />

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.87"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:background="@drawable/input"
        android:padding="10sp"
        android:textSize="28sp"
        android:textColor="@color/mainTextColor"
        android:fontFamily="@font/nexa_bold"
        android:backgroundTint="@color/colorPrimaryDark">

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>