<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBackground"
    android:backgroundTint="@color/darkBackground"
    tools:context=".AddSchoolActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addSchool_title"
        android:text="@string/addSchool_header"
        android:textAlignment="center"
        android:textColor="@color/mainTextColor"
        android:fontFamily="@font/nexa_bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="55sp"
        android:textAllCaps="false"
        app:layout_constraintVertical_bias="0.07">
    </TextView>

    <ImageView
        android:layout_width="140sp"
        android:layout_height="140sp"
        android:id="@+id/addSchool_icon"
        android:src="@drawable/add_school_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.2">
    </ImageView>

    <EditText
        android:id="@+id/addSchool_name"
        android:layout_width="340sp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/addSchool_name"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:padding="8dp"
        android:paddingStart="15dp"
        android:windowSoftInputMode="stateVisible|adjustPan"
        android:fontFamily="@font/circular_book"
        android:background="@drawable/input"
        android:textColorHint="@color/gray"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.43"/>

    <TextView
        android:layout_width="380sp"
        android:layout_height="wrap_content"
        android:id="@+id/addSchool_nameInstructions"
        android:text="@string/addSchool_nameInstructions"
        android:textAlignment="center"
        android:textColor="@color/mainTextColor"
        android:fontFamily="@font/nexa_light"
        app:layout_constraintTop_toBottomOf="@id/addSchool_name"
        app:layout_constraintBottom_toTopOf="@id/addSchool_city"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="15sp"
        android:textAllCaps="false"
        app:layout_constraintVertical_bias="0.5">
    </TextView>

    <EditText
        android:id="@+id/addSchool_city"
        android:layout_width="340sp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/addSchool_city"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:padding="8dp"
        android:paddingStart="15dp"
        android:windowSoftInputMode="stateVisible|adjustPan"
        android:fontFamily="@font/circular_book"
        android:background="@drawable/input"
        android:textColorHint="@color/gray"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.62"/>

    <AutoCompleteTextView
        android:id="@+id/addSchool_state"
        android:layout_width="340sp"
        android:layout_height="wrap_content"
        android:background="@drawable/input"
        android:fontFamily="@font/circular_book"
        android:inputType="text"
        android:padding="8dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:completionThreshold="0"
        android:textColorHint="@color/gray"
        android:textSize="23sp"
        android:hint="@string/addSchool_state"
        android:paddingStart="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.72"
        />

    <Button
        android:id="@+id/addSchool_button"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/addSchool_state"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.25"
        android:text="@string/addSchool_button"
        android:textAllCaps="false"
        android:background="@drawable/input"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:padding="9sp"
        android:textSize="28sp"
        android:textColor="@color/mainTextColor"
        android:fontFamily="@font/nexa_bold"
        android:backgroundTint="@color/colorPrimaryDark">

    </Button>

    <Button
        android:id="@+id/addSchool_goBack"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/addSchool_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.3"
        android:text="@string/addSchool_goBack"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:background="@drawable/input"
        android:padding="9sp"
        android:textSize="28sp"
        android:textColor="@color/mainTextColor"
        android:fontFamily="@font/nexa_bold"
        android:backgroundTint="@color/red">

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>