<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetupActivity"
    android:background="@color/darkBackground"
    android:backgroundTint="@color/darkBackground">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/setup"
        android:text="@string/setup"
        android:textColor="@color/mainTextColor"
        android:fontFamily="@font/nexa_bold"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="60sp"
        android:textAllCaps="false"
        app:layout_constraintVertical_bias="0.05"
        >
    </TextView>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="130sp"
        android:layout_height="130sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/blank_profile"
        android:id="@+id/setup_profilePic"
        app:layout_constraintVertical_bias="0.33"
        >
    </de.hdodenhof.circleimageview.CircleImageView>

    <EditText
    android:id="@+id/setup_firstName"
    android:layout_width="355sp"
    android:layout_height="wrap_content"
    android:hint="@string/inputFirstName"
    android:textColor="@color/black"
        android:singleLine="true"
    android:textSize="19sp"
    android:padding="10dp"
    android:fontFamily="@font/circular_book"
    android:background="@drawable/input"
    android:textColorHint="@color/gray"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintVertical_bias="0.55"/>

    <EditText
        android:id="@+id/setup_lastName"
        android:layout_width="355sp"
        android:layout_height="wrap_content"
        android:hint="@string/inputLastName"
        android:textColor="@color/black"
        android:singleLine="true"
        android:textSize="19sp"
        android:padding="10dp"
        android:fontFamily="@font/circular_book"
        android:background="@drawable/input"
        android:textColorHint="@color/gray"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.65"/>

    <EditText
        android:id="@+id/setup_username"
        android:layout_width="355sp"
        android:layout_height="wrap_content"
        android:hint="@string/inputUsername"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:padding="10dp"
        android:singleLine="true"
        android:fontFamily="@font/circular_book"
        android:background="@drawable/input"
        android:textColorHint="@color/gray"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.75"/>

    <EditText
        android:id="@+id/setup_country"
        android:layout_width="355sp"
        android:layout_height="wrap_content"
        android:hint="@string/inputCountry"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:singleLine="true"
        android:padding="10dp"
        android:fontFamily="@font/circular_book"
        android:background="@drawable/input"
        android:textColorHint="@color/gray"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.85"/>

    <Button
        android:id="@+id/finishSetupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.96"
        android:text="@string/finishSetup"
        android:textAllCaps="false"
        android:background="@drawable/input"
        android:padding="10sp"
        android:textSize="23sp"
        android:textColor="@color/mainTextColor"
        android:fontFamily="@font/nexa_bold"
        android:backgroundTint="@color/colorPrimaryDark">

    </Button>





</androidx.constraintlayout.widget.ConstraintLayout>