<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/darkBackground"
    tools:context=".SearchListFragment">

    <TextView
        android:layout_width="190sp"
        android:id="@+id/searchList_header"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/searchtab"
        android:fontFamily="@font/nexa_bold"
        android:textSize="40sp"
        android:textAlignment="center"
        android:textColor="@color/mainTextColor"
        app:layout_constraintVertical_bias="0.035"
        app:layout_constraintHorizontal_bias="0.6">
    </TextView>

    <View
        android:layout_width="match_parent"
        android:layout_height="5sp"
        android:id="@+id/searchList_border1"
        android:background="@color/mainTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.13">
    </View>

    <ImageView
        android:layout_width="35sp"
        android:layout_height="35sp"
        android:id="@+id/searchList_icon"
        android:src="@drawable/search_white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/searchList_header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.04"
        app:layout_constraintHorizontal_bias="0.99"
        >
    </ImageView>

    <EditText
        android:layout_width="320sp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:id="@+id/searchList_name"
        android:hint="  Group Name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.185"
        app:layout_constraintHorizontal_bias="0.23"
        android:background="@drawable/input"
        android:fontFamily="@font/circular_book"
        android:padding="7dp"
        android:textColor="@color/black"
        android:inputType="text"
        android:textColorHint="@color/gray"
        android:textSize="17sp"

        >
    </EditText>


    <ImageView
        android:layout_width="39sp"
        android:layout_height="39sp"
        android:id="@+id/searchList_searchButton"
        android:src="@drawable/search_white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/searchList_name"
        app:layout_constraintVertical_bias="0.184"
        app:layout_constraintHorizontal_bias="0.35"
        android:background="@drawable/input"
        android:backgroundTint="@color/colorPrimaryDark"
        android:padding="7sp"
        >
    </ImageView>

    <View
        android:layout_width="match_parent"
        android:layout_height="5sp"
        android:id="@+id/searchList_border2"
        android:background="@color/mainTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.27">
    </View>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchList_groupList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchList_border2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        ></androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:layout_width="350sp"
        android:id="@+id/searchList_noGroups"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/searchList_border2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/searchList_noGroups"
        android:fontFamily="@font/nexa_bold"
        android:textSize="25sp"
        android:textAlignment="center"
        android:textColor="@color/mainTextColor"
        app:layout_constraintVertical_bias="0.44">
    </TextView>

    <Button
        android:id="@+id/searchList_goBack"
        android:layout_width="wrap_content"
        android:layout_height="40sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.71"
        android:text="@string/searchList_goBack"
        android:textAllCaps="false"
        android:background="@drawable/input"
        android:gravity="center_vertical"
        android:padding="5sp"
        android:textSize="20sp"
        android:textColor="@color/mainTextColor"
        android:fontFamily="@font/nexa_bold"
        android:backgroundTint="@color/colorPrimaryDark">

    </Button>


</androidx.constraintlayout.widget.ConstraintLayout>